osd/scrub: use one single priority for all transactions initiated by scrub_compare_maps()

* using a single queue priority hint for all transactions
  initiated within scrub_compare_maps();
* low priority for queue_scrub_after_repair()

A follow-up PR will introduce more changes to scrub events queue
priorities. This change is a minimal & back-portable bug fix.

Fixes: https://tracker.ceph.com/issues/59049
Signed-off-by: Ronen Friedman <rfriedma@redhat.com>